objects/Ticket_Event_Venue_Address__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds data for Ticket Event  Street and City. Referenced in Ticket Distribution class.</description>
    <fields>
        <fullName>Venue_City__c</fullName>
        <label>Venue City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Street__c</fullName>
        <label>Venue Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_ZipCode__c</fullName>
        <label>Venue ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ticket Event Venue Address</label>
</CustomObject>